Bug 1165179 - use all style matched faces within a font family. r=heycam